--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -26,30 +26,33 @@
 
     <Button
         android:id="@+id/bTimeIn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_big"
         android:layout_marginTop="@dimen/margin_big"
+        android:background="@drawable/ripple_accent"
         android:fontFamily="@font/proxima_nova_medium"
         android:padding="@dimen/margin_normal"
-        android:text="Time In"
-        android:textColor="@color/primary_text_color"
+        android:text="Time In "
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bTimeOut"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLabelLog"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintWidth_percent=".35" />
 
     <Button
+        app:layout_constraintWidth_percent=".35"
         android:id="@+id/bTimeOut"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_big"
+        android:background="@drawable/ripple_accent"
         android:fontFamily="@font/proxima_nova_medium"
         android:padding="@dimen/margin_normal"
         android:text="Time Out"
-        android:textColor="@color/primary_text_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_size_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
